# openapi.yaml
@@ -22,7 +22,38 @@
           "200": {
             "description": "Successful operation",
             "schema": {
-              "$ref": "#/definitions/Bookings"
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "integer"
+                  },
+                  "membershipId": {
+                    "type": "string"
+                  },
+                  "bookingDate": {
+                    "type": "string",
+                    "format": "date-time"
+                  },
+                  "cartId": {
+                    "type": "integer"
+                  },
+                  "teeTime": {
+                    "type": "string",
+                    "format": "date-time"
+                  },
+                  "duration": {
+                    "type": "number"
+                  },
+                  "playerCount": {
+                    "type": "integer"
+                  },
+                  "charge": {
+                    "type": "number"
+                  }
+                }
+              }
             },
             "headers": {
               "Access-Control-Allow-Origin": {
@@ -65,7 +96,32 @@
             "name": "NewBooking",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/NewBooking"
+              "type": "object",
+              "properties": {
+                "membershipId": {
+                  "type": "string"
+                },
+                "bookingData": {
+                  "type": "string",
+                  "format": "date-time"
+                },
+                "cartId": {
+                  "type": "integer"
+                },
+                "teeTime": {
+                  "type": "string",
+                  "format": "date-time"
+                },
+                "duration": {
+                  "type": "number"
+                },
+                "playerCount": {
+                  "type": "integer"
+                },
+                "charge": {
+                  "type": "number"
+                }
+              }
             }
           }
         ],
@@ -73,7 +129,43 @@
           "200": {
             "description": "Successful operation",
             "schema": {
-              "$ref": "#/definitions/NewBookingResponse"
+              "type": "object",
+              "properties": {
+                "booking": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer"
+                    },
+                    "membershipId": {
+                      "type": "string"
+                    },
+                    "bookingDate": {
+                      "type": "string",
+                      "format": "date-time"
+                    },
+                    "cartId": {
+                      "type": "integer"
+                    },
+                    "teeTime": {
+                      "type": "string",
+                      "format": "date-time"
+                    },
+                    "duration": {
+                      "type": "number"
+                    },
+                    "playerCount": {
+                      "type": "integer"
+                    },
+                    "charge": {
+                      "type": "number"
+                    }
+                  }
+                },
+                "message": {
+                  "type": "string"
+                }
+              }
             },
             "headers": {
               "Access-Control-Allow-Origin": {
@@ -97,9 +189,8 @@
           "httpMethod": "POST",
           "type": "http"
         }
-      },
+      }
     },
-    ##################################################
     "/carts": {
       "get": {
         "tags": [
@@ -122,7 +213,27 @@
           "200": {
             "description": "Successful operation",
             "schema": {
-              "$ref": "#/definitions/Cart"
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "number": {
+                  "type": "integer"
+                },
+                "manufacturer": {
+                  "type": "string"
+                },
+                "fuelType": {
+                  "type": "integer"
+                },
+                "passengerCount": {
+                  "type": "integer"
+                },
+                "rate": {
+                  "type": "number"
+                }
+              }
             },
             "headers": {
               "Access-Control-Allow-Origin": {
@@ -171,7 +282,27 @@
           "200": {
             "description": "Successful operation",
             "schema": {
-              "$ref": "#/definitions/Cart"
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "number": {
+                  "type": "integer"
+                },
+                "manufacturer": {
+                  "type": "string"
+                },
+                "fuelType": {
+                  "type": "integer"
+                },
+                "passengerCount": {
+                  "type": "integer"
+                },
+                "rate": {
+                  "type": "number"
+                }
+              }
             },
             "headers": {
               "Access-Control-Allow-Origin": {
@@ -198,9 +329,8 @@
           "httpMethod": "GET",
           "type": "http"
         }
-      },
+      }
     },
-    ######################################################
     "/membership": {
       "get": {
         "tags": [
@@ -214,7 +344,31 @@
           "200": {
             "description": "Successful operation",
             "schema": {
-              "$ref": "#/definitions/Membership"
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "fullName": {
+                  "type": "integer"
+                },
+                "phone": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string"
+                },
+                "membershipId": {
+                  "type": "string"
+                },
+                "membershipType": {
+                  "type": "string"
+                },
+                "memberSince": {
+                  "type": "string",
+                  "format": "date-time"
+                }
+              }
             },
             "headers": {
               "Access-Control-Allow-Origin": {
@@ -238,22 +392,77 @@
           "httpMethod": "GET",
           "type": "http"
         }
-      },
-    },
+      }
+    }
   },
-  ###########################################################
   "definitions": {
     "Bookings": {
       "type": "array",
       "items": {
-        "$ref": "#/definitions/Booking"
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer"
+          },
+          "membershipId": {
+            "type": "string"
+          },
+          "bookingDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "cartId": {
+            "type": "integer"
+          },
+          "teeTime": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "duration": {
+            "type": "number"
+          },
+          "playerCount": {
+            "type": "integer"
+          },
+          "charge": {
+            "type": "number"
+          }
+        }
       }
     },
     "NewBookingResponse": {
       "type": "object",
       "properties": {
         "booking": {
-          "$ref": "#/definitions/Booking"
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer"
+            },
+            "membershipId": {
+              "type": "string"
+            },
+            "bookingDate": {
+              "type": "string",
+              "format": "date-time"
+            },
+            "cartId": {
+              "type": "integer"
+            },
+            "teeTime": {
+              "type": "string",
+              "format": "date-time"
+            },
+            "duration": {
+              "type": "number"
+            },
+            "playerCount": {
+              "type": "integer"
+            },
+            "charge": {
+              "type": "number"
+            }
+          }
         },
         "message": {
           "type": "string"
@@ -319,12 +528,31 @@
         }
       }
     },
-    ######################################################################
     "NewCartResponse": {
       "type": "object",
       "properties": {
         "cart": {
-          "$ref": "#/definitions/Cart"
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer"
+            },
+            "number": {
+              "type": "integer"
+            },
+            "manufacturer": {
+              "type": "string"
+            },
+            "fuelType": {
+              "type": "integer"
+            },
+            "passengerCount": {
+              "type": "integer"
+            },
+            "rate": {
+              "type": "number"
+            }
+          }
         },
         "message": {
           "type": "string"
@@ -374,7 +602,6 @@
         }
       }
     },
-    ##############################################
     "Membership": {
       "type": "object",
       "properties": {
